--- a/themes/edinburgh/layout/_partial/head.ejs
+++ b/themes/edinburgh/layout/_partial/head.ejs
@@ -1,39 +1,58 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
 
   <!-- Title -->
-  <%
-      var title = [];
-      if (page.current > 1) title.push(__('page', page.current));
-      if (page.title) title.push(page.title);
-      title.push(config.title);
-  %>
+  <% var title = []; if (page.current > 1) title.push(__('page', page.current));
+  if (page.title) title.push(page.title); title.push(config.title); %>
   <title><%= title.join(' - ') %></title>
 
   <!--Favicon-->
-  <link rel="icon" href="favicon/favicon.ico">
+  <link rel="icon" href="favicon/favicon.ico" />
+
+  <!-- Add icon library -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+  />
 
   <!--Description-->
   <% if (page.description){ %>
-      <meta name="description" content="<%= page.description %>">
+  <meta name="description" content="<%= page.description %>" />
   <% } else if (config.description){ %>
-      <meta name="description" content="<%= config.description %>">
+  <meta name="description" content="<%= config.description %>" />
   <% } else if (page.excerpt){ %>
-      <meta name="description" content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>">
+  <meta
+    name="description"
+    content="<%= strip_html(page.excerpt).replace(/^\s*/, '').replace(/\s*$/, '') %>"
+  />
   <% } else if (page.content){ %>
-      <meta name="description" content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>">
+  <meta
+    name="description"
+    content="<%= strip_html(page.content).replace(/^\s*/, '').replace(/\s*$/, '').substring(0, 150) %>"
+  />
   <% } %>
 
   <!--Author-->
   <% if (config.author){ %>
-      <meta name="author" content="<%= config.author %>">
+  <meta name="author" content="<%= config.author %>" />
   <% } %>
 
   <!-- Pure CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Open+Sans:300,800" rel="stylesheet">
+  <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+    integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+    crossorigin="anonymous"
+  />
+  <link
+    href="https://fonts.googleapis.com/css?family=Crimson+Text|Open+Sans:300,800"
+    rel="stylesheet"
+  />
 
   <!-- Custom CSS -->
   <%- css('css/styles.css') %>
