--- a/themes/edinburgh/layout/_partial/header.ejs
+++ b/themes/edinburgh/layout/_partial/header.ejs
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-toggleable-sm navbar-light px-1 py-3 my-3 mb-sm-5">
   <img src="/images/giflens-giflogo.gif" alt="logo" />
-  <a class="navbar-brand ml-2" href="<%- config.root %>"
+  <a
+    class="navbar-brand ml-2"
+    href="<%- config.root %>"
+    style="color: #fff; font-size: 3em; margin-left: 20px!important;"
     ><%-config.title || ""%></a
   >
   <button
@@ -18,7 +21,12 @@
     <ul class="navbar-nav ml-auto my-auto">
       <% for (var i in config.menu){ %>
       <li class="nav-item">
-        <a class="nav-link" href="<%- url_for(config.menu[i]) %>"><%= i %></a>
+        <a
+          style="color: #fff; font-size: 1.5em;"
+          class="nav-link"
+          href="<%- url_for(config.menu[i]) %>"
+          ><%= i %></a
+        >
       </li>
       <% } %>
     </ul>
