--- a/themes/edinburgh/layout/_partial/page-full.ejs
+++ b/themes/edinburgh/layout/_partial/page-full.ejs
@@ -1,8 +1,12 @@
 <% if (item.cover_image){ %>
-  <div class="col-12 mb-4">
-    <img class="img-fluid project-img" src="<%- config.root %><%- item.cover_image %>" alt="<%- item.title || "Untitled" %>">
-  </div>
+<div class="col-12 mb-4">
+  <img class="img-fluid project-img" src="<%- config.root %><%- item.cover_image
+  %>" alt="<%- item.title || "Untitled" %>">
+</div>
 <% } %>
-<div class="col-12 pt-lg-3 mb-4 px-4 portfolio-content">
+<div
+  class="col-12 pt-lg-3 mb-4 px-4 portfolio-content"
+  style="background-color: rgba(255, 255, 255, 0.9); border-radius: .5em;"
+>
   <%- item.content %>
 </div>
