added content and demo gifs

--- a/themes/edinburgh/layout/_partial/footer.ejs
+++ b/themes/edinburgh/layout/_partial/footer.ejs
@@ -17,15 +17,22 @@
 <div style="display: flex; justify-content: center;">
   <div style="margin: 15px;">
     <a
-      href="#"
+      href="https://github.com/giflens/giflens"
       class="fa fa-github"
       style="font-size: 4em; text-decoration: none; color: #ffffff"
     ></a>
   </div>
   <div style="margin: 15px;">
     <a
-      href="#"
+      href="https://twitter.com/giflens"
       class="fa fa-twitter"
+      style="font-size: 4em; text-decoration: none; color: #ffffff"
+    ></a>
+  </div>
+  <div style="margin: 15px;">
+    <a
+      href="mailto:giflens.vscode@gmail.com"
+      class="fa fa-envelope"
       style="font-size: 4em; text-decoration: none; color: #ffffff"
     ></a>
   </div>
