added the backgroung image into local files

--- a/themes/edinburgh/source/css/styles.css
+++ b/themes/edinburgh/source/css/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Source Sans Pro", sans-serif;
   /* background-image: url("https://wallpapercave.com/wp/wp3284839.gif"); */
-  background-image: url("https://i.ytimg.com/vi/h0LFFNgY_To/maxresdefault.jpg");
+  background-image: url("/images/maxresdefault.jpg");
   background-size: 100%;
 }
 
