changed the folder for assets

--- a/themes/edinburgh/layout/_partial/header.ejs
+++ b/themes/edinburgh/layout/_partial/header.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-toggleable-sm navbar-light px-1 py-3 my-3 mb-sm-5">
-  <img src="images/giflens-giflogo.gif" alt="logo" />
+  <img src="/assets/giflens-giflogo.gif" alt="logo" />
   <a
     class="navbar-brand ml-2"
     href="<%- config.root %>"
