--- a/themes/edinburgh/layout/_partial/header.ejs
+++ b/themes/edinburgh/layout/_partial/header.ejs
@@ -1,5 +1,10 @@
 <nav class="navbar navbar-toggleable-sm navbar-light px-1 py-3 my-3 mb-sm-5">
-  <img src="/assets/giflens-giflogo.gif" alt="logo" />
+  <img
+    src="https://media.giphy.com/media/W5UYJir9gpX3uZti84/source.gif"
+    alt="logo"
+    width="100px"
+    height="100px"
+  />
   <a
     class="navbar-brand ml-2"
     href="<%- config.root %>"
