--- a/themes/edinburgh/source/css/styles.css
+++ b/themes/edinburgh/source/css/styles.css
@@ -1,7 +1,8 @@
 body {
   font-family: "Source Sans Pro", sans-serif;
   /* background-image: url("https://wallpapercave.com/wp/wp3284839.gif"); */
-  background-image: url("/images/maxresdefault.jpg");
+  /* background-image: url("/images/maxresdefault.jpg"); */
+  background-color: darkgray;
   background-size: 100%;
 }
 
