--- a/themes/edinburgh/layout/_partial/page-full.ejs
+++ b/themes/edinburgh/layout/_partial/page-full.ejs
@@ -4,9 +4,14 @@
   %>" alt="<%- item.title || "Untitled" %>">
 </div>
 <% } %>
+<!-- Not using the portfolio content container for the about page -->
+<% if (path === 'about/index.html') { %> 
+  <%- item.content %>
+<% } else { %>
 <div
-  class="col-12 pt-lg-3 mb-4 px-4 portfolio-content"
+  class="col-12 pt-lg-3 mb-4 px-4 portfolio-content "
   style="background-color: rgba(255, 255, 255, 0.95); border-radius: .5em;"
 >
   <%- item.content %>
 </div>
+<% } %>
