fixed the overstretched logo

--- a/themes/edinburgh/layout/_partial/header.ejs
+++ b/themes/edinburgh/layout/_partial/header.ejs
@@ -2,6 +2,8 @@
   <img
     src="https://media.giphy.com/media/SA6yzQfvkW68UFKful/source.gif"
     alt="logo"
+    style="object-fit: none;"
+    class="logo-hidden-mobile"
   />
   <a
     class="navbar-brand ml-2"
